scroll-padding-top added for html tag for preventing scroll overlap, hero contact me button link added, underline animation for project name added by default for mobile device screens

--- a/src/components/utils/project-card/project_card.css
+++ b/src/components/utils/project-card/project_card.css
@@ -97,4 +97,7 @@
     .project-card-container .action-link {
         margin-top: 35px;
     }
+    .project-card-container .project-name::before {
+        animation: infinite-underline 3s ease-in-out infinite;
+    }
 }
